--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -1,11 +1,11 @@
 <div>
-  <%= form_tag("/products") %>
-  <%= text_field_tag(:product) %>
-  <%= submit_tag "add to cart" %>
+  <%= form_tag({controller: 'products', action: 'add', method: 'post'}) do %>
+  <input name = 'product' >
+  <input type = 'submit', value = 'add to cart' >
+<%end%>
 
-   <% if cart %>
     <% cart.each do |product| %>
       <h3><%= product %></h3>
     <% end %>
-  <% end %>
+
 </div>
